# coding-projects

./: .gitignore  LICENSE  README.md  test.py  test.txt
OCaml/projet N-dames OCaml/nreines/: dune-project  nreines.opam
OCaml/projet N-dames OCaml/nreines/_build/: .db  .digest-db  log
OCaml/projet N-dames OCaml/nreines/_build/default/: nreines.dune-package  nreines.install
OCaml/projet N-dames OCaml/nreines/_build/default/.dune/: configurator  configurator.v2
OCaml/projet N-dames OCaml/nreines/_build/default/_doc/_html/: index.html
OCaml/projet N-dames OCaml/nreines/_build/default/lib/: nreines.cma  nreines.cmxa  nreines.cmxs  nreines.ml-gen
OCaml/projet N-dames OCaml/nreines/_build/default/lib/.merlin-conf/: lib-nreines
OCaml/projet N-dames OCaml/nreines/_build/default/lib/.nreines.objs/: nreines__Algorithm.impl.d  nreines__Display.impl.all-deps  nreines__Display.impl.d
OCaml/projet N-dames OCaml/nreines/_build/default/test/.merlin-conf/: exe-nreines
OCaml/projet N-dames OCaml/nreines/lib/: algorithm.ml  display.ml  dune
OCaml/projet N-dames OCaml/nreines/test/: dune
OCaml/sandbox/: dune-project
OCaml/sandbox/_build/: .db  .digest-db  log
OCaml/sandbox/_build/default/: sandbox.dune-package  sandbox.install  sandbox.opam
OCaml/sandbox/_build/default/lib/: sandbox.cma  sandbox.cmxa  sandbox.cmxs
OCaml/sandbox/_build/default/lib/.merlin-conf/: lib-sandbox
OCaml/sandbox/_build/default/lib/.sandbox.objs/byte/: sandbox.cmi  (+2 more)
OCaml/sandbox/_build/default/test/.merlin-conf/: exe-sandbox
OCaml/sandbox/lib/: dune
OCaml/sandbox/test/: dune
(+620 files in other folders)
