(lang dune 3.7)

(name sandbox)

(generate_opam_files true)

; (source
;  (github username/reponame))

(authors "Mazoyer Amaury")

; (license LICENSE)

; (documentation https://url/to/documentation)

(package
 (name sandbox)
 (synopsis "A sandbox project")
 (description "A sandbox project to test OCaml features")
 (depends ocaml dune)
 (tags (sandbox)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
